# pyheck

./: .buildinfo  .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  bench.json  bench.py  genindex.html  index.html  mkdocs.yml  notes.md  noxfile.py  objects.inv  py-modindex.html  pyheck.pyi  pyproject.toml  search.html  searchindex.js
.github/workflows/: bench.yml  build.yml  docs.yml  lint.yml  nox.yml  release.yml
_static/: documentation_options.js
docs/: api_reference.md  conf.py  index.md  index.rst
src/: lib.rs
tests/: test_main.py
