[package]
name = "pyheck"
version = "0.1.4"
edition = "2021"
include = ["src/lib.rs", "./LICENSE", "pyproject.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyheck"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["abi3-py37", "extension-module"]

[dependencies]
heck = { version = "0.4.0", features = ["unicode"] }
rayon = "1.5.1"
