[tool.poetry]
name = "pyheck"
version = "0.1.5"
description = "Python bindings for heck, the Rust case conversion library"
authors = ["kevinheavey <kevinheavey123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
maturin = "^0.12.9"
black = "^21.12b0"
mypy = "^0.930"
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
inflection = "^0.5.1"
flake8 = "^4.0.1"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
bump2version = "^1.0.1"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"


[project]
name = "pyheck"
version = "0.1.5"
description = "Python bindings for heck, the Rust case conversion library"
authors = [ {name = "kevinheavey", email = "kevinheavey123@gmail.com"} ]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]


[project.urls]
homepage = "https://github.com/kevinheavey/pyheck"
documentation = "https://kevinheavey.github.io/pyheck/"
repository = "https://github.com/kevinheavey/pyheck"
changelog = "https://github.com/kevinheavey/pyheck/blob/main/CHANGELOG.md"
